# LocalInterpreter

./: .gitignore  README.md  pyproject.toml  requirements.txt
LocalInterpreter/: local.py  localcode.py  schema.py  test_repl.py  test_server.py
LocalInterpreter/interpreter/: localcode.py
LocalInterpreter/service/: local_service.py  openai_tools.py  python_service.py  schema.py  web_service.py
LocalInterpreter/utils/: JsonStreamParser.py  logger_util.py  lxml_util.py  openai_util.py  tavily_utils.py  trends.py  web.py
test/: test_async.py  test_chunks.py  test_code.py  test_duckduckgo.py  test_lxml.py  test_openai.py  test_openai_summary.py  test_pytrends.py  test_repl.py  test_sample_server.py  test_stream_parser.py  test_table.py  test_treands.py  test_web.py  test_webservice.py
test/web/: test_web_search.py
testData/: case0001.json  case0002.json  case0005.json  case0007.json  case0013.json  case0014.json  case0015.json  case0016.json  case0018.json  case0024.json  case0025.json  case0027.json  case0029.json  case0031.json  case0032.json  case0034.json  openai_stream_0001.json  openai_stream_0003.json
testData/jsonparser/: case0003.json  case0004.json  case0006.json  case0008.json  case0009.json  case0010.json  case0011.json  case0012.json  case0017.json  case0019.json  case0020.json  case0021.json  case0022.json  case0023.json  case0026.json  case0028.json  case0030.json  case0033.json  openai_stream_0002.json
testData/web/: case0001.html  case0001.md  case0002.html  case0002.md  case0003.html  case0003.md  case0004.html  case0004.md  case0005.html  (+13 more)
